# file-cleaner

./: Cargo.toml  app.json
src/: clean_manager.rs  config_resolver.rs  dir_remover.rs  dir_scanner.rs  file_remover.rs  file_scanner.rs  logger_config.rs  main.rs  run_params.rs  settings.rs  settings_reader.rs
