[package]
name = "file-cleaner"
version = "1.0.0"
edition = "2021"
authors = ["e.kiru"]
description = "Cleaning old files and dirs app..."

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.19", features = ["derive"] }
log = "0.4.22"
log4rs = "1.3.0"